sets up environment variables and config file fixes #24

--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "eslint-plugin-react": "^5.2.2"
   },
   "dependencies": {
+    "env2": "^2.1.0",
     "faucet": "0.0.1",
     "hapi": "^13.5.0",
     "inert": "^4.0.1",
