changes userid from payload to the url

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,8 @@ cache:
 before_script:
   - npm prune
 script:
-  - npm test
+  - npm servertest
+  - npm helpertest
   - npm run check-coverage
 after_success:
   - npm run report-coverage
