refactor tests and routes to minimise reliance on previous tests for pass #5

--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "description": "Wordpressish CMS project",
   "main": "server.js",
   "scripts": {
-    "authtest": "nodemon tests/authTest.js",
-    "servertest": "nodemon tests/serverTest.js",
+    "test": "nodemon tests/tests.js | faucet",
+    "servertest": "nodemon tests/serverTest.js | faucet",
     "nyantest": "nodemon tests/serverTest.js | tnyan",
-    "helpertest": "nodemon tests/helperTest.js"
+    "helpertest": "nodemon tests/helperTest.js | faucet"
   },
   "repository": {
     "type": "git",
