--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "faucet": "0.0.1",
     "handlebars": "^4.0.5",
     "hapi": "^13.5.0",
+    "hapi-auth-cookie": "^6.1.1",
     "inert": "^4.0.1",
     "istanbul": "^0.4.4",
     "pg": "^6.0.3",
